# DeepDAG

./: .gitignore  README.md  benchmark.py  pyproject.toml  requirements.txt
.github/workflows/: benchmarks.yml  ci.yml
HDRP/: LICENSE  METRICS_UPDATE_SUMMARY.md  PROFILING.md  README.md  __main__.py  benchmark.py  cli.py  demo_traceability.py  orchestrated_runner.py
HDRP/api/: README.md  __init__.py  buf.gen.yaml  buf.yaml
HDRP/api/openapi/: apidocs.swagger.json
HDRP/api/proto/: hdrp.proto  hdrp_services.proto  hdrp_services_pb2.py
HDRP/artifacts/: .gitkeep  README.md
HDRP/artifacts/0151fe1b-d325-44bf-9464-3b60930d863d/: metadata.json  report.md
HDRP/artifacts/1dc6bfcd-14ea-498d-84fb-12b6ea783cd1/: metadata.json  report.md
HDRP/artifacts/20d1be68-7b11-4d91-b017-f75ec5515921/: metadata.json  report.md
HDRP/artifacts/2cfa3f0b-1ac5-44cc-849f-6040ae7dc399/: metadata.json  report.md
HDRP/artifacts/3238cb1f-1c13-4a37-921a-de7a1deea78f/: metadata.json  report.md
HDRP/artifacts/426a9ad4-f9ff-4cae-bf73-57c2959be50b/: metadata.json  report.md
HDRP/artifacts/4c202911-a6f9-43b4-a578-9313fa8c8686/: metadata.json  report.md
HDRP/artifacts/4cb06d5f-9bcb-4823-8a6e-e5be9d8ca48e/: metadata.json  report.md
HDRP/artifacts/5fab5444-b7db-4de6-abd0-1e33a2afae24/: metadata.json  report.md
HDRP/artifacts/9a5f16d7-d025-4069-981d-14a5c94df51b/: metadata.json  report.md
HDRP/config/: README.md  config.dev.yaml  config.prod.yaml  config.staging.yaml  config.yaml
HDRP/dashboard/: __init__.py  api.py  app.py  data_loader.py  layout.py  test_data_loader.py
HDRP/logs/: 17668760-4cfb-4848-9243-bba4eeefb6a9.jsonl  9ffc646b-c8c1-449e-8633-1e0f8f6b7bd9.jsonl  a8f2ad2a-d214-4aca-b892-779e788e8667.jsonl  e16f62d4-ec44-460b-acbf-34351bdbae4f.jsonl  test-integration-run.jsonl
HDRP/orchestrator/: README.md  go.mod  go.sum  server
HDRP/services/: README.md  requirements.txt
HDRP/tests/: test_cli.py  test_dag_grouping.py  test_dashboard_api.py  test_dashboard_sse_streaming.py  test_integration.py  test_llm_dag_validation.py  test_orchestrated_runner.py  test_principal_decomposition.py  test_report_sections.py  test_traceability.py  test_verified_claims_enforcement.py
artifacts/: nli_direct_benchmark.json  test_set_benchmark.json  test_set_benchmark_baseline.json  threshold_optimization.json
artifacts/nli_scifact/: label_map.json
artifacts/nli_scifact_new/: README.md  config.json  model.safetensors  tokenizer_config.json
artifacts/scifact_nli/: stats.json
deploy/grafana/: hdrp-dashboard.json
logs/: 6a74454f-631a-4c5d-b8c6-a1f1538d146b.jsonl  README.md
(+188 files in other folders)
