[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HDRP"
version = "0.1.0"
description = "High-fidelity Digitized Research Platform"
requires-python = ">=3.10"
dependencies = [
    # Core gRPC and API dependencies
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
    "protobuf>=4.21.0",
    
    # AI/ML services
    "openai>=1.0.0",
    
    # Observability and error tracking
    "sentry-sdk>=1.40.0",
    
    # Data validation and configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    
    # ML/NLP dependencies
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    
    # Data handling
    "datasets",
    "huggingface_hub",
    
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    
    # HTTP client
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

dashboard = [
    "dash>=2.14.0",
    "dash-cytoscape>=0.3.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

profiling = [
    "snakeviz>=2.2.0",
    "aiohttp>=3.9.0",
]

observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "prometheus-client>=0.19.0",
]

testing = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-mock>=3.10.0",
]

onnx = [
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
]

onnx-gpu = [
    "onnx>=1.14.0",
    "onnxruntime-gpu>=1.16.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["HDRP*"]
